<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_backward"
        android:title="@string/menu_back"
        android:icon="@drawable/ic_arrow_back_white_24dp"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:enabled="true"
        app:showAsAction="always"/>
    <item android:id="@+id/action_forward"
        android:title="@string/menu_forward"
        android:icon="@drawable/ic_arrow_forward_white_24dp"
        android:enabled="false"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_open_in_browser"
        android:title="@string/menu_open_in_browser"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_copy"
        android:title="@string/menu_copy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_find_on_page"
        android:title="@string/menu_find_on_page"
        android:icon="@drawable/ic_find_in_page_white_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_reload"
        android:title="@string/menu_reload"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:enabled="true"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:enabled="true"
        app:showAsAction="never"/>
</menu>